# DeepSight

./: .gitignore  README.md  pyproject.toml  run_deepsight.sh
configs/: mission.example.toml
docs/: architecture.md  mission-tools.md  screenshots.md  trial-bag-analysis.md
src/deepsight/: __main__.py  bags.py  camera_live_cli.py  cli.py  config.py  costmap_live_cli.py  graph_monitor.py  network.py  pointcloud.py  pointcloud_cli.py  pointcloud_live_cli.py  postprocessing.py  ros.py  runner.py  server.py  tools.py  visual.py
src/deepsight/web/: app.js  camera-viewer.js  costmap-viewer.js  index.html  pointcloud-viewer.js  styles.css
tests/: test_bags.py  test_cloud_render_e2e.py  test_config.py  test_e2e_api.py  test_frontend_static.py  test_graph_monitor.py  test_network.py  test_pointcloud.py  test_postprocessing.py  test_ros.py  test_runner.py  test_server.py  test_visual.py
